Clean up README by removing log commands
Removed unnecessary log commands and system information from README.